apps/base/audiobookshelf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audiobookshelf
  template:
    metadata:
      labels:
        app: audiobookshelf
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000

      containers:
        - name: audiobookshelf
          image: ghcr.io/advplyr/audiobookshelf:latest
          ports:
            - containerPort: 3005
          securityContext:
            allowPrivilegeEscalation: false

          volumeMounts:
            - name: audiobookshelf-config
              mountPath: /app/config
            - name: audiobookshelf-data
              mountPath: /app/data
            - name: audiobookshelf-metadata
              mountPath: /app/metadata
      volumes:
        - name: audiobookshelf-config
          persistentVolumeClaim:
            claimName: audiobookshelf-config-pvc
        - name: audiobookshelf-data
          persistentVolumeClaim:
            claimName: audiobookshelf-data-pvc
        - name: audiobookshelf-metadata
          persistentVolumeClaim:
            claimName: audiobookshelf-metadata-pvc
