apps/base/audiobookshelf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
spec:
  ports:
    - port: 3005
      name: http
  selector:
    app: audiobookshelf
  type: ClusterIP
